Match the description of footnotes to fact

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -19,7 +19,7 @@ INTRODUCTION
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{17}{19}\selectfont}
-\tunemarkup{pgkoboaurahd}{\bibbookend}
+\tunemarkup{pgkoboaurahd}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
@@ -32,7 +32,7 @@ The technical peculiarities of \bibemph{The British Study Edition of The Urantia
 \begin{itemize}
 \item The present text of \bibemph{The Urantia Papers} is based on that of the Fifth Epochal Revelation,
 and was revised according to the present scientific knowledge and spiritual enlightenment.
-\item Study notes have been added and are marked with an asterisk, like this$^*$.
+\item Study notes and textual variants are printed in the apparatus at the bottom of the page.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'' a more compact form of ``75\%'' was chosen. Similarly, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
