Fix the 8 inch eInk build

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -20,7 +20,7 @@ INTRODUCTION
 \tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{17}{19}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
+\tunemarkup{pgauraone}{\bibbookend}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
 The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception.
