--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -46,9 +46,9 @@
 \vs p015 2:19 One system embraces, approximately\bibdf1,000 worlds
 \vs p015 2:20 One constellation (100 systems)\bibdf100,000 worlds
 \vs p015 2:21 One universe (100 constellations)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf10,000,000 worlds
-\vs p015 2:22 One minor sector (100 universes)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000 worlds
-\vs p015 2:23 One major sector (100 minor sectors)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf100,000,000,000 worlds
-\vs p015 2:24 One superuniverse (10 major sectors)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000,000 worlds
+\vs p015 2:22 One minor sector (100 universes)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000 worlds
+\vs p015 2:23 One major sector (100 minor sectors)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf100,000,000,000 worlds
+\vs p015 2:24 One superuniverse (10 major sectors)\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000,000 worlds
 \vs p015 2:25 \pc All such estimates are approximations at best, for new systems are constantly evolving while other organizations are temporarily passing out of material existence.
 \usection{The Superuniverse of Orvonton}
 \vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about \bibfrac{1}{7}\ts{th} of the inhabited evolutionary universes.
