--- a/tex/p025.tex
+++ b/tex/p025.tex
@@ -92,7 +92,7 @@
 \usection{The Morontia Companions}
 \vs p025 7:1 These children of the local universe Mother Spirits are the friends and associates of all who live the ascending morontia life. They are not indispensable to an ascender’s real work of creature progression, neither do they in any sense displace the work of the seraphic guardians who often accompany their mortal associates on the Paradise journey. The Morontia Companions are simply gracious hosts to those who are just beginning the long inward ascent. They are also skillful play sponsors and are ably assisted in this work by the reversion directors.
 \vs p025 7:2 Though you will have earnest and progressively difficult tasks to perform on the morontia training worlds of Nebadon, you will always be provided with regular seasons of rest and reversion. Throughout the journey to Paradise there will always be time for rest and spirit play; and in the career of light and life there is always time for worship and new achievement.
-\vs p025 7:3 These Morontia Companions are such friendly associates that, when you finally leave the last phase of the morontia experience, as you prepare to embark upon the superuniverse spirit adventure, you will truly regret that these companionable creatures cannot accompany you, but they serve exclusively in the local universes. At every stage of the ascending career all contactable personalities will be friendly and companionable, but not until you meet the Paradise Companions will you find another group so devoted to friendship and companionship.
+\vs p025 7:3 These Morontia Companions are such friend\-ly associates that, when you finally leave the last phase of the morontia experience, as you prepare to embark upon the superuniverse spirit adventure, you will truly regret that these companionable creatures cannot accompany you, but they serve exclusively in the local universes. At every stage of the ascending career all contactable personalities will be friendly and companionable, but not until you meet the Paradise Companions will you find another group so devoted to friendship and companionship.
 \vs p025 7:4 The work of the Morontia Companions is more fully depicted in those narratives dealing with the affairs of your local universe.
 \usection{The Paradise Companions}
 \vs p025 8:1 The Paradise Companions are a composite or assembled group recruited from the ranks of the seraphim, seconaphim, supernaphim, and omniaphim. Though serving for what you would regard as an extraordinary length of time, they are not of permanent status. When this ministry has been completed, as a rule (but not invariably) they return to those duties they performed when summoned to Paradise service.
