--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -56,7 +56,7 @@
 \vs p029 3:12 These living power mechanisms are not consciously related to the master universe energy overcontrol of the Unqualified Absolute, but we surmise that their entire and almost perfect scheme of power direction is in some unknown manner subordinated to this supergravity presence. In any local energy situation the centres and controllers exert near\hyp{}supremacy, but they are always conscious of the superenergy presence and the unrecognizable performance of the Unqualified Absolute.
 \usection{The Master Physical Controllers}
 \vs p029 4:1 These beings are the mobile subordinates of the Supreme Power Centres. The physical controllers are endowed with capabilities of individuality metamorphosis of such a nature that they can engage in a remarkable variety of autotransport, being able to traverse local space at velocities approaching the flight of Solitary Messengers. But like all other space traversers they require the assistance of both their fellows and certain other types of beings in overcoming the action of gravity and the resistance of inertia in departing from a material sphere.
-\vs p029 4:2 The Master Physical Controllers serve\tunemarkup{pgkoboaurahd}{\linebreak} throughout the grand universe. They are directly governed from Paradise by the Seven Supreme Power Directors as far as the headquarters of the superuniverses; from here they are directed and distributed by the Council of Equilibrium, the high commissioners of power dispatched by the Seven Master Spirits from the personnel of the Associate Master Force Organizers. These high commissioners are empowered to interpret the readings and registrations of the master frandalanks, those living instruments which indicate the power pressure and the energy charge of an entire superuniverse.
+\vs p029 4:2 The Master Physical Controllers serve\tunemarkup{pgauraone}{\linebreak}\tunemarkup{pgkoboaurahd}{\linebreak} throughout the grand universe. They are directly governed from Paradise by the Seven Supreme Power Directors as far as the headquarters of the superuniverses; from here they are directed and distributed by the Council of Equilibrium, the high commissioners of power dispatched by the Seven Master Spirits from the personnel of the Associate Master Force Organizers. These high commissioners are empowered to interpret the readings and registrations of the master frandalanks, those living instruments which indicate the power pressure and the energy charge of an entire superuniverse.
 \vs p029 4:3 While the presence of the Paradise Deities encircles the grand universe and sweeps around the circle of eternity, the influence of any one of the Seven Master Spirits is limited to a single superuniverse. There is a distinct segregation of energy and a separation of the circuits of power between each of the seven supercreations; hence individualized control methods must and do prevail.
 \vs p029 4:4 \pc The Master Physical Controllers are the direct offspring of the Supreme Power Centres, and their numbers include the following:
 \vs p029 4:5 \ublistelem{1.}\bibnobreakspace Associate Power Directors.
