--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -144,7 +144,7 @@
 \vsetspace
 \vs p030 1:103 \ublistelem{VI.}\bibnobreakspace \bibemph{SUPERPERSONAL BEINGS.} There is a vast host of other\hyp{}than\hyp{}personal beings of divine origin and of manifold service in the universe of universes. Certain of these beings are resident on the Paradise worlds of the Son; others, like the superpersonal representatives of the Eternal Son, are encountered elsewhere. They are for the most part unmentioned in these narratives, and it would be quite futile to attempt their description to \bibemph{personal} creatures.
 \vsetspace
-\vs p030 1:104 \ublistelem{VII.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
+\vs p030 1:104 \ublistelem{VII.}\bibnobreakspace\tunemarkup{pgauraone}{\kern-7pt}\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
 \begin{quote}
 \vs p030 1:105 The Consummator of Universe Destiny.
 \vs p030 1:106 The Qualified Vicegerents of the Ultimate.
@@ -331,7 +331,7 @@
 \end{quote}
 \vs p030 2:129 \pc This is the working classification of the personalities of the universes as they are of record on the headquarters world of Uversa.
 \vsetspace
-\vs p030 2:130 \pc\tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
+\vs p030 2:130 \pc\tunemarkup{pgauraone}{\kern-4pt}\tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
 \vsetspace
 \vs p030 2:131 \ublistelem{A.}\bibnobreakspace \bibemph{The Paradise Corps of the Finality.}
 \begin{quote}
