--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -73,7 +73,7 @@
 \vs p049 5:7 \ublistelem{6.}\bibnobreakspace Adjuster\hyp{}fusion series.
 \vs p049 5:8 \ublistelem{7.}\bibnobreakspace Techniques of terrestrial escape.
 \vs p049 5:9 \pc The inhabited spheres of the seven superuniverses are peopled with mortals who simultaneously classify in some one or more categories of each of these seven generalized classes of evolutionary creature life. But even these general classifications make no provision for such beings as midsoniters nor for certain other forms of intelligent life. The inhabited worlds, as they have been presented in these narratives, are peopled with evolutionary mortal creatures, but there are other life forms.
-\vs p049 5:10 \ublistelem{1.}\bibnobreakspace \bibemph{Adjustment to planetary environment.} There are three general groups of inhabited worlds from the standpoint of the adjustment of creature life to the planetary environment: the normal adjustment group, the radical adjustment group, and the experimental group.
+\vs p049 5:10 \ublistelem{1.}\bibnobreakspace \bibemph{Adjustment to planetary environment.}\tunemarkup{pgauraone}{\linebreak} There are three general groups of inhabited worlds from the standpoint of the adjustment of creature life to the planetary environment: the normal adjustment group, the radical adjustment group, and the experimental group.
 \vs p049 5:11 Normal adjustments to planetary conditions follow the general physical patterns previously considered. The worlds of the nonbreathers typify the radical or extreme adjustment, but other types are also included in this group. Experimental worlds are usually ideally adapted to the typical life forms, and on these decimal planets the Life Carriers attempt to produce beneficial variations in the standard life designs. Since your world is an experimental planet, it differs markedly from its sister spheres in Satania; many forms of life have appeared on Urantia that are not found elsewhere; likewise are many common species absent from your planet.
 \vs p049 5:12 In the universe of Nebadon, all the life\hyp{}modification worlds are serially linked together and constitute a special domain of universe affairs which is given attention by designated administrators; and all of these experimental worlds are periodically inspected by a corps of universe directors whose chief is the veteran finaliter known in Satania as Tabamantia.
 \vs p049 5:13 \ublistelem{2.}\bibnobreakspace \bibemph{Brain\hyp{}type series.} The one physical uniformity of mortals is the brain and nervous system; nevertheless, there are three basic organizations of the brain mechanism: the one-, the two-, and the three\hyp{}brained types. Urantians are of the two\hyp{}brained type\fnst{The two conjectures on the identification of these ``two brains'' were: a) the two hemispheres of the cerebral cortex and b) the brain proper and the spinal cord. Both conjectures turned out to be wrong after careful examination of Dr William~S. Sadler's ``Physiology of Faith and Fear'', Chicago, 1912 (pp.~513--514), where the first brain is identified with the brain proper (including medulla oblongata and the spinal cord) and the second brain is the \emph{solar plexus}, also referred to as \emph{the ``abdominal brain''}.}, somewhat more imaginative, adventurous, and philosophical than the one\hyp{}brained mortals but somewhat less spiritual, ethical, and worshipful than the three\hyp{}brained orders. These brain differences characterize even the prehuman animal existences.
