--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -9,7 +9,7 @@
 \vs p059 0:1 We reckon the history of Urantia as beginning about one billion years ago and extending through five major eras:
 \vs p059 0:2 \ublistelem{1.}\bibnobreakspace \bibemph{The prelife era} extends over the initial 450,000,000 years, from about the time the planet attained its present size to the time of life establishment. Your students have designated this period as the \bibemph{Archeozoic.}
 \vs p059 0:3 \ublistelem{2.}\bibnobreakspace \bibemph{The life\hyp{}dawn era} extends over the next 150,000,000 years. This epoch intervenes between the preceding prelife or cataclysmic age and the following period of more highly developed marine life. This era is known to your researchers as the \bibemph{Proterozoic.}
-\vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
+\vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next\tunemarkup{pgauraone}{\linebreak} 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
 \vs p059 0:5 \ublistelem{4.}\bibnobreakspace \bibemph{The early land\hyp{}life era} extends over the next 100,000,000 years and is known as the \bibemph{Mesozoic.}
 \vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
 \vs p059 0:7 \pc The marine\hyp{}life era thus covers about \bibfrac{1}{4}\ts{er} of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
