--- a/tex/p060.tex
+++ b/tex/p060.tex
@@ -44,7 +44,7 @@
 \vs p060 3:4 \pc \bibemph{100,000,000} years ago the North American continent and a part of Europe were well above water. The warping of the American continents continued, resulting in the metamorphosing of the South American Andes and in the gradual elevation of the western plains of North America. Most of Mexico sank beneath the sea, and the southern Atlantic encroached on the eastern coast of South America, eventually reaching the present shore line. The Atlantic and Indian Oceans were then about as they are today.
 \vs p060 3:5 \pc \bibemph{95,000,000} years ago the American and European land masses again began to sink. The southern seas commenced the invasion of North America and gradually extended northward to connect with the Arctic Ocean, constituting the second greatest submergence of the continent. When this sea finally withdrew, it left the continent about as it now is. Before this great submergence began, the eastern Appalachian highlands had been almost completely worn down to the water’s level. The many coloured layers of pure clay now used for the manufacture of earthenware were laid down over the Atlantic coast regions during this age, their average thickness being about 600\,m.
 \vs p060 3:6 Great volcanic actions occurred south of the Alps and along the line of the present California coast\hyp{}range mountains. The greatest crustal deformations in millions upon millions of years took place in Mexico. Great changes also occurred in Europe, Russia, Japan, and southern South America. The climate became increasingly diversified.
-\vs p060 3:7 \pc \bibemph{90,000,000} years ago the angiosperms emerged from these early Cretaceous seas and soon overran the continents. These land plants \bibemph{suddenly} appeared along with fig trees, magnolias, and tulip trees. Soon after this time fig trees, breadfruit trees, and palms overspread Europe and the western plains of North America. No new land animals appeared.
+\vs p060 3:7 \pc \bibemph{90,000,000} years ago the angiosperms\tunemarkup{pgauraone}{\linebreak} emerged from these early Cretaceous seas and soon overran the continents. These land plants \bibemph{suddenly} appeared along with fig trees, magnolias, and tulip trees. Soon after this time fig trees, breadfruit trees, and palms overspread Europe and the western plains of North America. No new land animals appeared.
 \vs p060 3:8 \pc \bibemph{85,000,000} years ago the Bering Strait closed, shutting off the cooling waters of the northern seas. Theretofore the marine life of the Atlantic\hyp{}Gulf waters and that of the Pacific Ocean had differed greatly, owing to the temperature variations of these two bodies of water, which now became uniform.
 \vs p060 3:9 The deposits of chalk and greensand marl give name to this period. The sedimentations of these times are variegated, consisting of chalk, shale, sandstone, and small amounts of limestone, together with inferior coal or lignite, and in many regions they contain oil. These layers vary in thickness from 61\,m in some places to 3\,km in western North America and numerous European localities. Along the eastern borders of the Rocky Mountains these deposits may be observed in the uptilted foothills.
 \vs p060 3:10 All over the world these strata are permeated with chalk, and these layers of porous semirock pick up water at upturned outcrops and convey it downward to furnish the water supply of much of the earth’s present arid regions.
