--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -97,7 +97,7 @@
 \vs p144 5:25 \separatorshort
 \vs p144 5:26 Our perfect and righteous heavenly Father,
 \vs p144 5:27 \hsetoff This day guide and direct our journey.
-\vs p144 5:28 \tunemarkup{pgkoboaurahd}{\kern-5pt}Sanctify our steps and co\hyp{}ordinate our thoughts.
+\vs p144 5:28 \tunemarkup{pgauraone}{\kern-11pt}\tunemarkup{pgkoboaurahd}{\kern-5pt}Sanctify our steps and co\hyp{}ordinate our thoughts.
 \vs p144 5:29 \hsetoff Ever lead us in the ways of eternal progress.
 \vs p144 5:30 Fill us with wisdom to the fullness of power
 \vs p144 5:31 \hsetoff And vitalize us with your infinite energy.
