--- a/tex/urantia-hyphen-en.tex
+++ b/tex/urantia-hyphen-en.tex
@@ -1,4 +1,8 @@
 \hyphenation{%
+se-mi-sav-age
+se-mi-sav-ages
+sav-age
+atom-ic
 Hel-le-nize
 Hel-le-nized
 moth-er
@@ -341,6 +345,7 @@ Gi-be-on
 So-lo-mon
 Med-i-ter-ra-nean
 at-tri-bute
+ide-a-tion
 ide-a-tion-al
 wo-men
 over-in-dul-gence
