--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -765,8 +765,7 @@
 }
 
 \tunemarkup{pgauraone}{%
-\tolerance=9999
-\setcounter{DefaultLines}{4}
+\tolerance=3000
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
@@ -785,12 +784,12 @@
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
-\newcommand{\subfont}{\fontsize{16}{20}\itshape}
-\newcommand{\parttitlefontsize}{\huge}
+\newcommand{\subfont}{\fontsize{15}{18}\itshape}
+\newcommand{\parttitlefontsize}{\LARGE}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7}{11}\selectfont}
-\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{10}{10}\selectfont}
-\renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9.5}{10}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{15}{17}\selectfont}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
