--- a/tex/p071.tex
+++ b/tex/p071.tex
@@ -97,7 +97,7 @@
 \vs p071 6:3 The profit motive of economic activities is altogether base and wholly unworthy of an advanced order of society; nevertheless, it is an indispensable factor throughout the earlier phases of civilization. Profit motivation must not be taken away from men until they have firmly possessed themselves of superior types of nonprofit motives for economic striving and social serving --- the transcendent urges of superlative wisdom, intriguing brotherhood, and excellency of spiritual attainment.
 \usection{Education}
 \vs p071 7:1 The enduring state is founded on culture, dominated by ideals, and motivated by service. The purpose of education should be acquirement of skill, pursuit of wisdom, realization of selfhood, and attainment of spiritual values.
-\vs p071 7:2 In the ideal state, education continues throughout life, and philosophy sometime becomes the chief pursuit of its citizens. The citizens of such a commonwealth pursue wisdom as an enhancement of insight into the significance of human relations, the meanings of reality, the nobility of values, the goals of living, and the glories of cosmic destiny.
+\vs p071 7:2 In the ideal state, education continues\tunemarkup{pgauraone}{\linebreak} throughout life, and philosophy sometime becomes the chief pursuit of its citizens. The citizens of such a commonwealth pursue wisdom as an enhancement of insight into the significance of human relations, the meanings of reality, the nobility of values, the goals of living, and the glories of cosmic destiny.
 \vs p071 7:3 Urantians should get a vision of a new and higher cultural society. Education will jump to new levels of value with the passing of the purely profit\hyp{}motivated system of economics. Education has too long been localistic, militaristic, ego exalting, and success seeking; it must eventually become world\hyp{}wide, idealistic, self\hyp{}realizing, and cosmic grasping.
 \vs p071 7:4 Education recently passed from the control of the clergy to that of lawyers and businessmen. Eventually it must be given over to the philosophers and the scientists. Teachers must be free beings, real leaders, to the end that philosophy, the search for wisdom, may become the chief educational pursuit.
 \vs p071 7:5 Education is the business of living; it must continue\tunemarkup{pgnexus10}{\linebreak} throughout a lifetime so that mankind may gradually experience the ascending levels of mortal wisdom, which are:
