Fix the 5 inch eInk build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -694,15 +694,15 @@
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
-\newcommand{\subfont}{\fontsize{16}{18}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\Large ahb}}
+\newcommand{\subfont}{\fontsize{13}{16}\itshape}
+\newcommand{\parttitlefontsize}{\Large}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
-\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
-\renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{7}{7}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
 }
 
 \tunemarkup{pghanlin}{%
