Add a note about Melchizedek

--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -21,7 +21,7 @@
 \vs p020 1:3 \ublistelem{2.}\bibnobreakspace Magisterial Sons --- the Avonals.
 \vs p020 1:4 \ublistelem{3.}\bibnobreakspace Trinity Teacher Sons --- the Daynals.
 \vs p020 1:5 \pc The remaining four orders of descending sonship are known as the \bibemph{Local Universe Sons of God:}
-\vs p020 1:6 \ublistelem{4.}\bibnobreakspace Melchizedek Sons.
+\vs p020 1:6 \ublistelem{4.}\bibnobreakspace Melchizedek\fnst{In the Hebrew text of the Old Testament the word \textheb{מַלְכִּי־צֶדֶק} occurs only twice: in Genesis~14:18 and Psalms~110:4 and the reason for this is explained in \bibref[93:9.9]{p093 9:9}. The Ancient Hebrew of pre\hyp{}Biblical times had, like the Classical Arabic, three cases with the following endings: -u (nominative), -i (genitive) and -a (accusative). The -i preserved in the proper name \textheb{מַלְכִּי־צֶדֶק}, which means ``the king of righteousness'', probably explains the irregular form of the noun in the construct state, instead of the incorrect form \textheb{מֶלֶךְ־צֶדֶק} suggested by the rules of the grammar.} Sons.
 \vs p020 1:7 \ublistelem{5.}\bibnobreakspace Vorondadek Sons.
 \vs p020 1:8 \ublistelem{6.}\bibnobreakspace Lanonandek Sons.
 \vs p020 1:9 \ublistelem{7.}\bibnobreakspace The Life Carriers.
