Added a note about Avonals, etc.

--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -11,17 +11,17 @@
 \uminitoc{United Ministry of the Paradise Sons}
 \author{Perfector of Wisdom}
 \vs p020 0:1 As they function in the superuniverse of Orvonton, the Sons of God are classified under three general heads:
-\vs p020 0:2 \ublistelem{1.}\bibnobreakspace The Descending Sons of God.
+\vs p020 0:2 \tunemarkup{pgnexus10}{\kern15pt}\ublistelem{1.}\bibnobreakspace The Descending Sons of God.
 \vs p020 0:3 \ublistelem{2.}\bibnobreakspace The Ascending Sons of God.
 \vs p020 0:4 \ublistelem{3.}\bibnobreakspace The Trinitized Sons of God.
 \vs p020 0:5 \pc Descending orders of sonship include personalities who are of direct and divine creation. Ascending sons, such as mortal creatures, achieve this status by experiential participation in the creative technique known as evolution. Trinitized Sons are a group of composite origin which includes all beings embraced by the Paradise Trinity even though not of direct Trinity origin.
 \usection{The Descending Sons of God}
-\vs p020 1:1 All descending Sons of God have high and divine origins. They are dedicated to the descending ministry of service on the worlds and systems of time and space, there to facilitate the progress in the Paradise climb of the lowly creatures of evolutionary origin --- the ascending sons of God. Of the numerous orders of descending Sons, seven will be depicted in these narratives. Those Sons who come forth from the Deities on the central Isle of Light and Life are called the \bibemph{Paradise Sons of God} and embrace the following three orders:
+\vs p020 1:1 All descending Sons of God have high and divine origins. They are dedicated to the descending ministry of service on the worlds and systems of time and space, there to facilitate the progress in the Paradise climb of the lowly creatures of evolutionary origin --- the ascending sons of God. Of the numerous orders of descending Sons, seven will be depicted in these narratives. Those Sons who come forth from the Deities on the central Isle of Light and Life are called the \bibemph{Paradise Sons of God} and embrace the following three orders\fnst{The following seven categories are split into two groups of three elements and one last element forming a group by itself. The name of the first element of each group is chosen from the well\hyp{}known biblical names: \bibemph{Michael} from the Hebrew \textheb{מִיכָאֵל} \bibemph{mi ka el} ``who is like God?'' and \bibemph{Melchizedek} from the Hebrew \textheb{מַלְכִּי־צֶדֶק} \bibemph{malki tsedek} ``the king of righteousness''. The remaining two names in each group are constructed from the two components: a root, bearing the lexical meaning and the ending -el/-al signifying the connection with the corresponding group's chief element. Thus, \bibemph{Avonal}, no doubt, originates from the Hebrew \textheb{עָוֺן} \bibemph{avon} ``iniquity'' or ``visitation upon iniquities'' and \bibemph{Daynal} comes, likewise, from the Hebrew \textheb{דֵעָה} \bibemph{deah} ``knowledge'', especially ``the knowledge \bibemph{about} God''. The old Saxon origin of \bibemph{Vorondadek} from vor- $+$ on $+$ da- $=$ ``the very same one as the Father'' and \bibemph{Lanonandek} from lan- $+$ on- $+$ an- $=$ ``no longer the same one as [the Father]'' I consider very doubtful.}:
 \vs p020 1:2 \ublistelem{1.}\bibnobreakspace Creator Sons --- the Michaels.
 \vs p020 1:3 \ublistelem{2.}\bibnobreakspace Magisterial Sons --- the Avonals.
 \vs p020 1:4 \ublistelem{3.}\bibnobreakspace Trinity Teacher Sons --- the Daynals.
 \vs p020 1:5 \pc The remaining four orders of descending sonship are known as the \bibemph{Local Universe Sons of God:}
-\vs p020 1:6 \ublistelem{4.}\bibnobreakspace Melchizedek\fnst{In the Hebrew text of the Old Testament the word \textheb{מַלְכִּי־צֶדֶק} occurs only twice: in Genesis~14:18 and Psalms~110:4 and the reason for this is explained in \bibref[93:9.9]{p093 9:9}. The Ancient Hebrew of pre\hyp{}Biblical times had, like the Classical Arabic, three cases with the following endings: -u (nominative), -i (genitive) and -a (accusative). The -i preserved in the proper name \textheb{מַלְכִּי־צֶדֶק}, which means ``the king of righteousness'', probably explains the irregular form of the noun in the construct state, instead of the incorrect form \textheb{מֶלֶךְ־צֶדֶק} suggested by the rules of the grammar.} Sons.
+\vs p020 1:6 \ublistelem{4.}\bibnobreakspace Melchizedek\fnst{In the Hebrew text of the Old Testament the word \textheb{מַלְכִּי־צֶדֶק} occurs only twice: in Genesis~14:18 and Psalms~110:4 and the reason for this is explained in \bibref[93:9.9]{p093 9:9}. The Ancient Hebrew of pre\hyp{}Biblical times had, like the Classical Arabic, three cases with the following endings: -u (nominative), -i (genitive) and -a (accusative). The -i preserved in the proper name \textheb{מַלְכִּי־צֶדֶק}, which means ``the king of righteousness'', probably explains the irregular form of the noun in the construct state, instead of the \bibemph{incorrect} form \textheb{מֶלֶךְ־צֶדֶק} produced by following the rules of the Biblical Hebrew grammar.} Sons.
 \vs p020 1:7 \ublistelem{5.}\bibnobreakspace Vorondadek Sons.
 \vs p020 1:8 \ublistelem{6.}\bibnobreakspace Lanonandek Sons.
 \vs p020 1:9 \ublistelem{7.}\bibnobreakspace The Life Carriers.
