Use SBL Hebrew font, as in the Russian edition

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1007,7 +1007,8 @@
 %\newfontfamily\greekfont[Mapping=tex-text]{Galatia SIL}
 \newfontfamily\greekfont[Mapping=tex-text]{SBL Greek}
 %\newfontfamily\greekfont[Mapping=tex-text]{Minion Pro}
-\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
+%\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
+\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{SBL Hebrew}
 \newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{ArTarumianGrqiBardzr_U}
 \newfontfamily\chinesefont[Mapping=tex-text]{Code2000}
 \newcommand{\textheb}[1]{{\hebrewfont#1}}
