Shift a note on 20:1.1 to a better location

--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -16,7 +16,7 @@
 \vs p020 0:4 \ublistelem{3.}\bibnobreakspace The Trinitized Sons of God.
 \vs p020 0:5 \pc Descending orders of sonship include personalities who are of direct and divine creation. Ascending sons, such as mortal creatures, achieve this status by experiential participation in the creative technique known as evolution. Trinitized Sons are a group of composite origin which includes all beings embraced by the Paradise Trinity even though not of direct Trinity origin.
 \usection{The Descending Sons of God}
-\vs p020 1:1 All descending Sons of God have high and divine origins. They are dedicated to the descending ministry of service on the worlds and systems of time and space, there to facilitate the progress in the Paradise climb of the lowly creatures of evolutionary origin --- the ascending sons of God. Of the numerous orders of descending Sons, seven will be depicted in these narratives. Those Sons who come forth from the Deities on the central Isle of Light and Life are called the \bibemph{Paradise Sons of God} and embrace the following three orders\fnst{The following seven categories are split into two groups of three elements and one last element forming a group by itself. The name of the first element of each group is chosen from the well\hyp{}known biblical names: \bibemph{Michael} from the Hebrew \textheb{מִיכָאֵל} \bibemph{mi ka el} ``who is like God?'' and \bibemph{Melchizedek} from the Hebrew \textheb{מַלְכִּי־צֶדֶק} \bibemph{malki tsedek} ``the king of righteousness''. The remaining two names in each group are constructed from the two components: a root, bearing the lexical meaning and the ending -el/-al signifying the connection with the corresponding group's chief element. Thus, \bibemph{Avonal}, no doubt, originates from the Hebrew \textheb{עָוֺן} \bibemph{avon} ``iniquity'' or ``visitation upon iniquities'' and \bibemph{Daynal} comes, likewise, from the Hebrew \textheb{דֵעָה} \bibemph{deah} ``knowledge'', especially ``the knowledge \bibemph{about} God''. The old Saxon origin of \bibemph{Vorondadek} from vor- $+$ on $+$ da- $=$ ``the very same one as the Father'' and \bibemph{Lanonandek} from lan- $+$ on- $+$ an- $=$ ``no longer the same one as [the Father]'' I consider very doubtful.}:
+\vs p020 1:1 All descending Sons of God have high and divine origins. They are dedicated to the descending ministry of service on the worlds and systems of time and space, there to facilitate the progress in the Paradise climb of the lowly creatures of evolutionary origin --- the ascending sons of God. Of the numerous orders of descending Sons, seven\fnst{The seven orders are split into two groups of three elements each plus one element forming a group of its own. The name of the first element of each group coincides with a well\hyp{}known biblical term: \bibemph{Michael} from the Hebrew \textheb{מִיכָאֵל} \bibemph{mi ka el} ``who is like God?'' and \bibemph{Melchizedek} from the Hebrew \textheb{מַלְכִּי־צֶדֶק} \bibemph{malki tsedek} ``the king of righteousness''. The remaining two names in each group are constructed from the two components: a root, bearing the lexical meaning and the ending -el/-al, signifying the affinity with the group's chief element. Thus, \bibemph{Avonal}, no doubt, originates from the Hebrew \textheb{עָוֺן} \bibemph{avon} ``iniquity'' or ``visitation upon iniquities'' and \bibemph{Daynal,} likewise, comes from the Hebrew \textheb{דֵעָה} \bibemph{deah} ``knowledge'', especially ``the knowledge \bibemph{about} God''. As for the Old Saxon derivation of \bibemph{Vorondadek} from vor- $+$ on- $+$ da- $=$ ``the very same one as the Father'' and \bibemph{Lanonandek} from lan- $+$ on- $+$ an- $=$ ``no longer the same one as [the Father]''~--- I consider both very doubtful.} will be depicted in these narratives. Those Sons who come forth from the Deities on the central Isle of Light and Life are called the \bibemph{Paradise Sons of God} and embrace the following three orders:
 \vs p020 1:2 \ublistelem{1.}\bibnobreakspace Creator Sons --- the Michaels.
 \vs p020 1:3 \ublistelem{2.}\bibnobreakspace Magisterial Sons --- the Avonals.
 \vs p020 1:4 \ublistelem{3.}\bibnobreakspace Trinity Teacher Sons --- the Daynals.
